fix logo active area, candidate name visibility

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+h1 {
+    display: inline-block;
+}
+
 .candidate {
     margin-top: 10px;
     margin-bottom: 10px;
@@ -24,6 +28,7 @@
     opacity: 0;
     color: #ffffff;
     font-size: 30px;
+    text-shadow: 0px 0px 10px #000000;
     transition: opacity 0.4s;
 }
 
